objects/SfpowerscriptsArtifact2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sfpowerscripts artifacts installed in the org</description>
    <fields>
        <fullName>CommitId__c</fullName>
        <description>Git commit ID from which artifact was created</description>
        <label>Commit Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>Git tag of artifact</description>
        <label>Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version number of artifact</description>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sfpowerscripts Artifact 2</label>
</CustomObject>